# zclint

./: .gitignore  Cargo.toml  README.md  git  rules.md  zip
src/: lsp_main.rs  main.rs
src/cli/: commands.rs  output.rs
src/core/: config.rs  linter.rs  mod.rs  types.rs
src/rules/: mod.rs  no_disallowed_imports.rs  no_disallowed_patterns.rs  no_event_handlers.rs  no_inline_functions.rs  no_logical_and.rs  no_plain_ts.rs  no_reactive_primitives.rs  no_ternary.rs
