[package]
name = "zclint"
version = "0.1.0"
edition = "2021"
description = "Zero-code linter for codeless components"
authors = ["Entaprenua"]
license = "MIT"
rust-version = "1.70"

[[bin]]
name = "zclint"
path = "src/main.rs"

[[bin]]
name = "zclint-lsp"
path = "src/lsp_main.rs"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive", "env"] }
anyhow = "1.0"
colored = "2.0"
glob = "0.3"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"

# Pattern matching
regex = "1.10"
once_cell = "1.18"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
